# GeometricRegressor

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp  mainwindow.py  readme.md
core/: ga_runner.py  piecewise.py  pointwise.py  polynomial.py  project.py  resampling.py
docs/: piecewise.md  pointwise.md  regress.md  resampling.md  ui.md
include/: affine.hpp  conformal.hpp  context.hpp  model.hpp  utils.hpp
src/: affine.cpp  conformal.cpp  model.cpp
ui/: SPOT.txt  hover_button.py  k.kntu  kk.kntu  magnifier.py  maintoolbox.py  project.kntu
ui/widgets/: circular.py
videos/: turn.sh
